<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.reichelt.moritz.vertretungsplangenschergymnasium.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login_welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/login_description"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/login_edit_text_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
            <!--
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_mode"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/dropdownSpinner"
                            android:spinnerMode="dropdown"/>

                        </LinearLayout>
            -->
            <Button
                android:id="@+id/loginConfirm"
                android:layout_width="175dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/login_button_confirm"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
